fix(flexible-text): fix IFC white space #INFR-953

--- a/src/flexible-text/styles/flexible-text.scss
+++ b/src/flexible-text/styles/flexible-text.scss
@@ -1,4 +1,5 @@
 .flexible-text-container {
     width: 100%;
     display: inline-block;
+    vertical-align: bottom;
 }
